[package]
name = "werewolf"
version = "0.1.0"
authors = ["Rick van der Wal <rickvanderwalvis@gmail.com>"]
edition = "2018"
description = "A soon to be automatic implementation of the social deduction game, Werewolf."
readme = "README.md"
repository = "https://github.com/Tortoaster/werewolf"
license = "MIT OR Apache-2.0"
keywords = ["werewolf", "mafia"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
